--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/multer": "^1.4.13",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.5",
     "cloudinary": "^1.41.3",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
@@ -25,15 +29,11 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.20.1",
     "multer": "^1.4.5-lts.1",
-    "stripe": "^14.15.0"
+    "stripe": "^14.15.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.11.5",
     "nodemon": "^3.0.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2"
   }
 }
