--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,9 @@
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "typescript": "^5.9.3",
+    "vite": "^5.4.21"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
@@ -49,8 +51,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.9.3",
-    "vite": "^5.4.21"
+    "tailwindcss": "^3.4.1"
   }
 }
